// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBig className 1`] = `
<ToggleBig
  className="c"
>
  <button
    className="toggle-big toggle-big__container c"
    disabled={false}
    onClick={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="toggle-big__bar"
    />
    <span
      className="toggle-big__bar-shadow"
    />
    <span
      className="toggle-big__knob d-flex flex-column justify-content-center align-items-center"
    >
      <Memo(CloseIcon)
        className="toggle-big__icon"
        size={16}
      >
        <svg
          className="mdi-icon toggle-big__icon"
          fill="currentColor"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </Memo(CloseIcon)>
    </span>
    <span
      className="toggle-big__text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig disabled 1`] = `
<ToggleBig
  disabled={true}
  onToggle={[Function]}
>
  <button
    className="toggle-big toggle-big__container"
    disabled={true}
    onClick={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="toggle-big__bar"
    />
    <span
      className="toggle-big__bar-shadow"
    />
    <span
      className="toggle-big__knob d-flex flex-column justify-content-center align-items-center"
    >
      <Memo(CloseIcon)
        className="toggle-big__icon"
        size={16}
      >
        <svg
          className="mdi-icon toggle-big__icon"
          fill="currentColor"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </Memo(CloseIcon)>
    </span>
    <span
      className="toggle-big__text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig value is false 1`] = `
<ToggleBig
  value={false}
>
  <button
    aria-checked={false}
    className="toggle-big toggle-big__container"
    disabled={false}
    onClick={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="toggle-big__bar"
    />
    <span
      className="toggle-big__bar-shadow"
    />
    <span
      className="toggle-big__knob d-flex flex-column justify-content-center align-items-center"
    >
      <Memo(CloseIcon)
        className="toggle-big__icon"
        size={16}
      >
        <svg
          className="mdi-icon toggle-big__icon"
          fill="currentColor"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </Memo(CloseIcon)>
    </span>
    <span
      className="toggle-big__text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig value is true 1`] = `
<ToggleBig
  value={true}
>
  <button
    aria-checked={true}
    className="toggle-big toggle-big__container"
    disabled={false}
    onClick={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={1}
  >
    <span
      className="toggle-big__bar toggle-big__bar--on"
    />
    <span
      className="toggle-big__bar-shadow toggle-big__bar-shadow--on"
    />
    <span
      className="toggle-big__knob d-flex flex-column justify-content-center align-items-center toggle-big__knob--on"
    >
      <Memo(CheckIcon)
        className="toggle-big__icon--on"
        size={16}
      >
        <svg
          className="mdi-icon toggle-big__icon--on"
          fill="currentColor"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </Memo(CheckIcon)>
    </span>
    <span
      className="toggle-big__text toggle-big__text--on"
    >
      Enabled
    </span>
  </button>
</ToggleBig>
`;
